# coruse_outline_generator_agentic_AI

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  COMPREHENSIVE_LOGGING_COMPLETE.md  COMPREHENSIVE_LOGGING_READY.md  FLOW_LOGGING_IMPLEMENTATION.md  QUICKSTART.md  README.md  add_all_decorators.py  app.py  config.py  demo_flow_logging.py  display_modules.py  pyproject.toml  requirements.txt  test_module_creation_agent.py  test_output.txt
agents/: __init__.py  base.py  module_creation_agent.py  orchestrator.py  query_agent.py  retrieval_agent.py  validator_agent.py  web_search_agent.py
chroma_db/: chroma.sqlite3
data/sample_curricula/: .gitkeep  java.txt
data/sample_user_uploads/: .gitkeep
docs/: AGENT_LLM_TEST_RESULTS.md  API_SPECS.md  ARCHITECTURE.md  LLM_SERVICE_QUICK_REFERENCE.md  LLM_SERVICE_REFACTORING.md  MISTRAL_CLIENT_TEST_REPORT.md  MISTRAL_IMPLEMENTATION_SUMMARY.md  PHASED_IMPLEMENTATION_PLAN.md  REFACTORING_COMPLETE.md  SEARCH_TOOLS_TEST_COMPLETE.md  TAVILY_SETUP.md  WEB_SEARCH_AGENT_TEST_REPORT.md  _REFACTORING_OVERVIEW.py
prompts/: module_creation_constraints.txt  module_creation_schema.txt  module_creation_system.txt  module_creation_user_input.txt  orchestrator.txt  query_module_refinement.txt  web_search_agent.txt  web_search_synthesis.txt
schemas/: __init__.py  agent_outputs.py  course_outline.py  execution_context.py  retrieval_agent_output.py  user_input.py  vector_document.py  web_search_agent_output.py
services/: README.md  __init__.py  db_service.py  embedding_service.py  llm_service.py  vector_store.py
services/providers/: __init__.py  anthropic_client.py  gemini_client.py  mistral_client.py  openai_client.py
tests/: __init__.py  test_mistral_client.py  test_mistral_direct.py  test_mistral_functional.py  test_mistral_unit.py  test_phase_1_ui.py  test_phase_2_orchestrator.py  test_phase_3_retrieval.py  test_phase_4_web_search.py  test_phase_5_module_creation.py  test_phase_6_validator.py  test_phase_7_query.py  test_phase_7_query_agent.py  test_phase_8_ux.py  test_phase_9_observability.py  test_project_boot.py  test_schemas.py  validate_mistral_client.py
tools/: __init__.py  curriculum_ingestion.py  pdf_loader.py  web_search_tools.py  web_tools.py
utils/: __init__.py  duration_allocator.py  flow_logger.py  learning_mode_templates.py  logging.py  prompt_loader.py  scoring.py  session.py
ux/: __init__.py  editing_service.py  error_handling.py  export_service.py  feedback_service.py  outline_renderer.py  partial_regeneration.py  provenance.py  session_state.py  validator_feedback.py
vectorstore/: __init__.py  chroma_client.py  embeddings.py
